fix card header alignment; change card dimensions

--- a/src/components/Tasks/Tasks.module.css
+++ b/src/components/Tasks/Tasks.module.css
@@ -1,7 +1,8 @@
 .container {
   background-color: #fafafa;
   color: #0a0a0a;
-  width: 600px;
+  width: 500px;
+  height: 500px;
   border-radius: 20px;
   padding: 40px 20px;
 }
@@ -9,6 +10,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .addBtn {
